fix:swago, middleware
